logs/infinite-160824_190558.log
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\Toontown\toontown\toonbase\ClientStart.py", line 234, in loadScripts
    execfile('mods/'+scriptName,globals())
  File "mods/Compilation.txt", line 206, in <module>
    toonAnywhere = DirectButton(text = ("Enable Toonup anywhere", "ENABLE TOONUP ANYWHERE", "enable toonup anywhere", "enable toonup anywhere"), scale=.06, pos = (-1,-0,-.3), command=ToonupAnywhere.toonUpSetUp)
NameError: name 'ToonupAnywhere' is not defined

phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
test2
{402000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E483328>, 401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E486300>, 404000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E7763C8>, 405000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E776328>, 403000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E770BE8>}
__handleAvatarChooserDone: 100000013, 'Little Zippy', ('rsl', 'ls', 'l', 'm', 19, 0, 19, 19, 10, 9, 0, 9, 7, 0), 1
2
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_6/dna/storage_DD.pdna
Reading DNA file... phase_6/dna/storage_DD_sz.pdna
Reading DNA file... phase_6/dna/donalds_dock_sz.pdna
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 656, in <module>
  File "Building Autoer Toontask.txt", line 395
    if self.shardIds[0] == base.localAvatar.defaultShard:
     ^
IndentationError: expected an indented block

frame rate: 23.7 fps|0.022d|1 avs||346|349||0x1002|0x6738|377.2MB|398.0MB|16330.4MB|445|nt.2.6.2|3.300,3.300|3,6 cpus|OpenGL
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 657, in <module>
  File "Building Autoer Toontask.txt", line 395
    if self.shardIds[0] == base.localAvatar.defaultShard:
     ^
IndentationError: expected an indented block

frame rate: 8.6 fps|0.049d|1 avs||651|655||0x1002|0x6738|401.1MB|421.6MB|16330.4MB|452|nt.2.6.2|3.300,3.300|3,6 cpus|OpenGL
<__main__.TaskAutoer instance at 0x15160058>
test
test
test
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_8/dna/storage_DG.pdna
Reading DNA file... phase_5/dna/storage_town.pdna
Reading DNA file... phase_8/dna/storage_DG_town.pdna
Reading DNA file... phase_8/dna/daisys_garden_5100.pdna
